--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "firebase": "^10.4.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-button": "^0.7.2",
     "react-hook-form": "^7.46.0",
     "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3",
