--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
@@ -20,10 +21,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
-    "react-hook-form": "^7.46.0",
+    "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "daisyui": "^3.6.4"
