--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json-server": "json-server --watch db/data.json --port 3002"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -16,6 +17,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "firebase": "^10.4.0",
+    "json-server": "^0.17.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -23,8 +25,10 @@
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.47.0",
     "react-redux": "^8.1.3",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
